--- a/src/tauargus/gui/DialogSpecifyTablesTabular.form
+++ b/src/tauargus/gui/DialogSpecifyTablesTabular.form
@@ -62,7 +62,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="panelVariables" pref="150" max="32767" attributes="0"/>
+                  <Component id="panelVariables" pref="154" max="32767" attributes="0"/>
                   <Component id="panelCost" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -133,7 +133,7 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <EmptySpace pref="12" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
