--- a/src/tauargus/gui/DialogSpecifyTablesMicro.form
+++ b/src/tauargus/gui/DialogSpecifyTablesMicro.form
@@ -1524,7 +1524,8 @@
     </Container>
     <Component class="javax.swing.JButton" name="buttonComputeTables">
       <Properties>
-        <Property name="label" type="java.lang.String" value="Compute tables"/>
+        <Property name="text" type="java.lang.String" value="Compute tables"/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonComputeTablesActionPerformed"/>
